Ensure error message visibility, compromising on button centering
It's still centered until there's an error message to show, so it's not so bad.
But I'd like it to stay centered if there's room, ideally.

--- a/tracky-mouse.css
+++ b/tracky-mouse.css
@@ -73,11 +73,12 @@
 	width: 100%;
 	height: 100%;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 }
 .tracky-mouse-use-camera-button {
-	font-size: 2em;
+	font-size: min(2em, 8vw);
 	color: white;
 	background-color: rgb(220, 20, 60);
 	border: 0;
@@ -89,11 +90,10 @@
 	background-color: rgb(230, 20, 62);
 }
 .tracky-mouse-error-message {
-	position: absolute;
-	bottom: 20%;
-	font-size: 1.5em;
+	font-size: min(1.5em, 6vw);
 	text-align: center;
 	color: white;
+	padding: 5px;
 }
 
 /* Screen overlay in electron app */
